--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>React</title>
+    <title>React&百度地图 示例</title>
   </head>
   <body>
     <div id="root"></div>
